# payment-core

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
docs/: business-logic.md  checkout-flow.md  endpoints.md  er-diagram.md  sequence-diagram.md
payments/: admin.py  resources.py  urls.py
payments/management/commands/: setup_dev.py
payments/migrations/: 0001_initial.py  0002_alter_subscriptionhistory_stripe_subscription_id.py  0003_alter_checkoutsession_type.py  0004_remove_credithistory_is_active_credithistory_status_and_more.py
payments/models/: __init__.py  checkout_session.py  company.py  company_usage_history.py  credit_history.py  credit_plan.py  invoice_history.py  stripe_customer.py  subscription_history.py  subscription_plan.py  user.py
payments/services/: __init__.py  remaining_credit.py  remaining_subscription.py  stripe_checkout.py  stripe_checkout_validator.py  stripe_service.py  stripe_webhook.py
payments/tests/: conftest.py  mock_stripe.py  test_remaining_credit.py  test_remaining_subscription.py  test_stripe_checkout.py  test_stripe_checkout_validator.py  test_stripe_webhook.py
payments/views/: __init__.py  auth.py  checkout.py  dashboard.py  export.py  webhook.py
templates/: base.html
templates/admin/: index.html
templates/payments/: checkout_cancel.html  checkout_error.html  checkout_success.html  dashboard.html  login.html
